--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -27,7 +27,7 @@
 */
 
 // Define base and accent colors
-$base-color: #3498db;
+$base-color: #292b2b;
 $base-color-hover: darken($base-color, 10%);
 
 // Define background colors
