--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -31,7 +31,7 @@ $base-color: #292b2b;
 $base-color-hover: darken($base-color, 10%);
 
 // Define background colors
-$background: #fff;
+$background: #000;
 $background-alt: #f2f2f5;
 
 // Define border colors
